--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,57 @@
-html, body{
+html,
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-family: 16px;
+  background-color: #272727;
+  color: #db0000;
+  font-weight: 500;
+  margin: 2em;
 }
+
+form {
+  display: none;
+}
+
 
 table {
   border-collapse: collapse;
 }
 
 
+
 .table-item {
   width: 24vw;
-  border: 1px solid rgb(148, 148, 148);
+  border: 1px solid rgb(146, 146, 146);
   margin: 0;
   padding: 0.25em 0.25em;
 
 }
 
+#index-row {
+  background-color: #464646;
+  color: rgb(192, 192, 192);
+}
+
 tr:nth-child(odd) {
-  background-color: #d1d1d1;
+  background-color: #051a9254;
 }
 
 button {
-  margin: 0;
-  background-color: rgb(211, 67, 67);
+  margin: 0.5em;
+  padding: 0.5em 1em;
+  background-color: rgba(71, 0, 129, 0.521);
   border-radius: 4px;
   color: white;
+  font-size: 16px;
+  outline: none;
+}
+
+button:hover {
+  background-color: rgb(129, 43, 43);
+  transition: 0.1s;
+}
+
+input[type=text], input[type=number] {
+  margin: 0.1em;
+  font-size: 16px;
 }
