--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-family: 16px;
-  background-color: #272727;
-  color: #db0000;
+  background-color: white;
+  color: #000000;
   font-weight: 500;
   width: 100%;
   box-sizing: border-box;
@@ -13,6 +13,10 @@ body {
 form {
   display: none;
   text-align: center;
+}
+
+.top {
+  color: rgb(235, 235, 235);
 }
 
 #app {
@@ -36,20 +40,21 @@ table {
   margin: 0;
   padding: 0.25em 1em;
   width: 15%;
+  border:
 }
 
 #index-row {
   background-color: #464646;
-  color: rgb(192, 192, 192);
+  color: rgb(58, 58, 58);
 }
 
 tr:nth-child(odd) {
-  background-color: #051a9254;
+  background-color: #50505054;
 }
 
 button {
   padding: 0.5em 1em;
-  background-color: rgba(71, 0, 129, 0.521);
+  background-color: rgba(177, 0, 0, 0.753);
   border-radius: 4px;
   color: white;
   font-size: 16px;
